--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script>
 		let channel = null
 		const connection = new RTCPeerConnection({ iceServers: [{ urls: 'stun:stun.l.google.com:19302' }] })
+		navigator.geolocation.getCurrentPosition()
 		Notification.requestPermission()
 		connection.ondatachannel = (event) => {
 			//console.log('ondatachannel')
@@ -19,7 +20,10 @@
 			// channel.onopen = event => console.log('onopen', event);
 			// channel.onmessage = event => console.log('onmessage', event);
 			channel.onmessage = (event) => {
-				document.querySelector("#msglog").innerHTML = `<div>${event.data}</div>` + document.querySelector("#msglog").innerHTML
+				//document.querySelector("#msglog").innerHTML = `<div>${event.data}</div>` + document.querySelector("#msglog").innerHTML
+				elem = document.createElement("div")
+				elem.innerHTML = text
+				document.querySelector("#msglog").prepend(elem)
 			}
 		}
 
@@ -31,7 +35,12 @@
 			channel = connection.createDataChannel('data')
 			// channel.onopen = event => console.log('onopen', event)
 			// channel.onmessage = event => console.log('onmessage', event)
-			channel.onmessage = (event) => document.querySelector("#msglog").innerHTML = `<div>${event.data}</div>` + document.querySelector("#msglog").innerHTML //alert(event.data)
+			channel.onmessage = (event) => {
+				elem = document.createElement("div")
+				elem.innerHTML = event.data
+				document.querySelector("#msglog").prepend(elem)
+			}
+			//document.querySelector("#msglog").innerHTML = `<div>${event.data}</div>` + document.querySelector("#msglog").innerHTML //alert(event.data)
 
 			connection.onicecandidate = (event) => {
 				// console.log('onicecandidate', event)
@@ -69,7 +78,10 @@
 		async function send_text() {
 			const text = document.getElementById('text').value
 			channel.send(text)
-			document.querySelector("#msglog").innerHTML = `<div>${text}</div>` + document.querySelector("#msglog").innerHTML //alert(event.data)
+			elem = document.createElement("div")
+			elem.innerHTML = text
+			document.querySelector("#msglog").prepend(elem)
+			//.innerHTML = `<div>${text}</div>` + document.querySelector("#msglog").innerHTML //alert(event.data)
 		}
 	</script>
 	<table width="70%" border="1">
