--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script>
 		let channel = null
 		const connection = new RTCPeerConnection({ iceServers: [{ urls: 'stun:stun.l.google.com:19302' }] })
-		navigator.geolocation.getCurrentPosition()
+		navigator.geolocation.getCurrentPosition(()=>{})
 		Notification.requestPermission()
 		connection.ondatachannel = (event) => {
 			//console.log('ondatachannel')
